Fix map being cut off for real this time

--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ body {
 
 #map {
     width: 100%;
-    height: 81%;
+    height: calc(100vh - 140px);
 }
 
 #map-side-panel,
